[feature] delete session and sessions for user
